--- a/package.json
+++ b/package.json
@@ -4,7 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint-staged": "npx lint-staged",
+    "prettier-fix": "npx prettier --write .",
+    "lint": "eslint **/*.{ts,tsx} --no-error-on-unmatched-pattern --fix"
+  },
+  "lint-staged": {
+    "**/*.{js,ts,tsx,html}": [
+      "npm run prettier-fix",
+      "npm run lint --fix"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "bin": {
     "iwant": "index.js"
@@ -19,5 +33,36 @@
   "homepage": "git+https://github.com:tahir-kali/iwant-fsd-cli.git#README",
   "dependencies": {
     "iwant-fsd": "^1.3.0"
+  },
+  "devDependencies": {
+
+    "husky": "^8.0.3",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@types/uuid": "^9.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
+    "@vitejs/plugin-react-swc": "^3.3.2",
+    "clsx": "^2.0.0",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^5.1.2",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "prettier": "^3.0.1",
+    "prettier-eslint": "^15.0.1",
+    "sass-loader": "^13.3.2",
+    "stylelint-prettier": "^4.0.2",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5"
+  
   }
 }
