--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.7.0",
   "description": "",
   "main": "./src/index.js",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "build": "tsup src/index.ts --format esm --clean",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -41,14 +41,15 @@
   "author": "Codeholic",
   "license": "ISC",
   "homepage": "git+https://github.com:tahir-kali/iwant-fsd-cli.git#README",
-  "dependencies": {
-    "iwant-fsd": "^1.3.0"
-  },
   "devDependencies": {
-    "husky": "^8.0.3",
+    "@tsconfig/recommended": "^1.0.3",
+    "@types/mock-fs": "^4.13.4",
+    "@types/node": "^20.10.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/uuid": "^9.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "clsx": "^2.0.0",
     "eslint": "^8.56.0",
@@ -63,19 +64,15 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-unused-imports": "^3.0.0",
-    "@tsconfig/recommended": "^1.0.3",
-    "@types/mock-fs": "^4.13.4",
-    "@types/node": "^20.10.2",
-    "tsup": "^8.0.1",
-    "typescript": "^5.3.2",
-    "@typescript-eslint/eslint-plugin": "^6.13.1",
-    "@typescript-eslint/parser": "^6.13.1",
+    "husky": "^8.0.3",
+    "mock-fs": "^5.2.0",
     "prettier": "^3.0.1",
     "prettier-eslint": "^15.0.1",
     "sass-loader": "^13.3.2",
     "stylelint-prettier": "^4.0.2",
     "tailwindcss": "^3.3.3",
-    "mock-fs": "^5.2.0",
+    "tsup": "^8.0.1",
+    "typescript": "^5.3.2",
     "vitest": "^0.34.6"
   },
   "files": [
