--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iwant-fsd",
-  "version": "1.12.0",
+  "version": "1.13.0",
   "description": "",
   "main": "./src/index.js",
   "type": "module",
@@ -72,7 +72,7 @@
     "stylelint-prettier": "^4.0.2",
     "tailwindcss": "^3.3.3",
     "tsup": "^8.0.1",
-    "typescript": "^5.3.2",
+    "typescript": "^5.3.3",
     "vitest": "^0.34.6"
   },
   "files": [
@@ -81,5 +81,8 @@
     "README.md",
     "LICENSE",
     "package.json"
-  ]
+  ],
+  "dependencies": {
+    "simple-git": "^3.22.0"
+  }
 }
